_notes/errbyfile/ClickGui.java.txt
ru\metaculture\protection\ClickGui.java:691: error: incompatible types: 
Object cannot be converted to int
            var18[var2.get(var19)] = var19++;
                          ^

ru\metaculture\protection\ClickGui.java:728: error: incompatible types: 
Object cannot be converted to Module
      for (Module var4 : var1) {
                         ^

ru\metaculture\protection\ClickGui.java:763: error: incompatible types: 
Object cannot be converted to Module
      for (Module var10 : var1) {
                          ^

  ru\metaculture\protection\ClickGui.java:691: error: incompatible types: 
Object cannot be converted to int
              var18[var2.get(var19)] = var19++;
                            ^

  ru\metaculture\protection\ClickGui.java:728: error: incompatible types: 
Object cannot be converted to Module
        for (Module var4 : var1) {
                           ^

  ru\metaculture\protection\ClickGui.java:763: error: incompatible types: 
Object cannot be converted to Module
        for (Module var10 : var1) {
                            ^
